[project]
name = "anydbapp"
version = "0.1.0"
description = "MCP Server for generic SQL operations with Ollama integration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "langchain>=0.0.350",
    "langchain-community>=0.0.10",
    "langchain-core>=0.1.0",
    "mcp>=0.4.0",
    "ollama>=0.2.1",
    "pydantic>=2.0.0",
    "sqlite3",
    "aiosqlite>=0.19.0",
    "typing-extensions>=4.0.0"
]

[project.scripts]
anydbapp = "main:main"
